--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Fabiano Furlan (Technical Solutions Architect)",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.2",
     "config": "^3.0.1",
     "debug": "^3.1.0",
@@ -28,7 +29,9 @@
     "htmlparser2": "^3.10.1",
     "is-port-reachable": "^2.0.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
     "jsxapi": "^4.2.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.18",
     "node-sparkclient": "^0.1.4",
     "nodemailer": "^4.7.0",
